<resources>
    <string name="app_name">HindiNews</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Hindi News</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="bbc">Hindustan</string>
    <string name="fox_news">Dainik Bhaskar</string>
    <string name="cnn">Dainik Jagran</string>
    <string name="sky_news">Amar Ujala</string>
    <string name="aljazeera">Prabhat Khabar</string>
    <string name="upcoming">UpComing</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Fox">Dainik Bhaskar</string>
    <string name="Sky">Amar Ujala</string>
    <string name="patrika">Patrika</string>
    <string name="navbharat_times">NavBharat Times</string>
    <string name="credits">Credits</string>
    <string name="creditss">This is a free / non-monetized app and all its content belongs to their original owners like Hindustan,dainik bhaskar, dainik jagran , prabhat khabar and amar ujala. This app is build to bring all the reputed news agencies at one platform for the convenience of the users. For any query , advice or suggestion please e-mail to mailsandstuffs@gmail.com .</string>
</resources>